<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginHorizontal="20dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".onBoarding.company.CompanyRegisterFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/goBackToCompanyRegister"
            android:src="@drawable/ic_arrow_left"
            android:background="@null"
            android:layout_marginTop="20dp"/>
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="50dp"
            android:src="@drawable/br_scout_logo" />

    </LinearLayout>
    <EditText
        android:id="@+id/companyNameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/company_name" />

    <EditText
        android:id="@+id/companySizeET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/company_size"
        android:inputType="number" />

    <EditText
        android:id="@+id/companyAddressET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/company_address" />

    <EditText
        android:id="@+id/companyFoundedYearET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/company_founded_year"
        android:inputType="date" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/uploadCompanyLogoBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:paddingHorizontal="5dp"
            android:text="@string/upload_company_nlogo"
            android:textAllCaps="false"
            android:textColor="@color/colorOnPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:text="@string/optional" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/colorOnPrimary" />
</LinearLayout>