<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        tools:context=".drawerMenu.AboutUsFragment">
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@mipmap/ic_launcher_foreground" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brief_description_of_the_app"
            android:textColor="@color/main_blue"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/main_blue"
            android:text="@string/br_scout_is_a_smart_headhunting_app_that_helps_companies_find_top_candidates_based_on_skill_based_recommendation_algorithms"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mission_statement"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="25dp"
            android:textColor="@color/main_blue"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/main_blue"
            android:text="@string/our_mission_is_to_streamline_the_recruitment_process_by_connecting_companies_with_the_most_relevant_talent_through_intelligent_matching"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/our_story"
            android:textColor="@color/main_blue"
            android:textSize="16sp"
            android:layout_marginTop="25dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/our_story_text"
            android:textSize="16sp"
            android:lineSpacingExtra="1dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/main_blue"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/main_blue"
            android:textStyle="bold"
            android:layout_marginTop="25dp"
            android:textSize="16sp"
            android:text="@string/what_makes_us_unique"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_makes_us_unique_text"
            android:textSize="16sp"
            android:lineSpacingExtra="1dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/main_blue"/>
    </LinearLayout>
</ScrollView>
