<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".onBoarding.candidate.CandidateTechSkillsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_left"
                android:background="@null"
                android:id="@+id/goBackToCandidateInfo"
                android:layout_marginTop="10dp"/>
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:padding="50dp"
                android:src="@drawable/br_scout_logo"  />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_are_your_technical_skills"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"/>

        <AutoCompleteTextView
            android:id="@+id/skillSearchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_skills"
            android:inputType="text"
            android:layout_marginTop="20dp" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/selectedSkillsChipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:singleLine="false"
            app:chipSpacing="8dp"
            android:orientation="horizontal"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nextBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/colorOnPrimary"
            android:layout_marginBottom="120dp"/>
    </LinearLayout>

</ScrollView>