<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:layout_marginBottom="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView

        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/vacancyCompanyLogo"
        android:src="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <TextView
        android:id="@+id/vacancyIsActive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/active"
        android:background="@drawable/white_round_corners_bg"
        android:backgroundTint="@color/colorPrimary"
        android:paddingHorizontal="5dp"
        android:paddingVertical="3dp"
        android:textColor="@color/green"
        app:layout_constraintBottom_toBottomOf="@id/vacancyCompanyLogo"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vacancyJobTitle"
        android:maxLines="1"
        app:layout_constraintTop_toTopOf="@id/vacancyCompanyLogo"
        app:layout_constraintStart_toEndOf="@id/vacancyCompanyLogo"
        android:text="@string/job_title"
        android:layout_marginStart="10dp"
        android:textColor="?android:textColorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/vacancyJobCompanyName"
        android:textSize="17sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vacancyJobCompanyName"
        android:textSize="16sp"
        android:maxLines="1"
        android:text="@string/company_name"
        app:layout_constraintBottom_toTopOf="@id/vacancyLocation"
        app:layout_constraintTop_toBottomOf="@id/vacancyJobTitle"
        app:layout_constraintStart_toStartOf="@id/vacancyJobTitle"
        android:textColor="?android:textColorPrimary"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vacancyLocation"
        app:layout_constraintTop_toBottomOf="@id/vacancyJobCompanyName"
        app:layout_constraintStart_toStartOf="@id/vacancyJobCompanyName"
        app:layout_constraintBottom_toBottomOf="@id/vacancyCompanyLogo"
        android:text="Tbilisi, Georgia"
        android:textColor="#50000000"
        android:textSize="15sp"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>